[tool.poetry]
name = "norma-jora-bot"
version = "0.1.0"
description = "Telegram bot for nutrition calculation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 